tests/error/type_errors/fun_ty_mismatch_3.err
Guppy compilation failed. Error in file $FILE:11

9:         return f(42)
10:    
11:    return bar(foo)
                  ^^^
GuppyTypeError: Expected argument of type `int -> bool`, got `int -> int`
